primary_services_code/main.tf
# No change required in this file

resource "aws_vpc" "New_Customer_VPC" {
  cidr_block           = var.cidr
  instance_tenancy     = "default"
  enable_dns_hostnames = true

  tags = {
    Name = "${var.CUSTOMER_NAME}-VPC-prod"
  }
}

resource "aws_subnet" "public_1" {
  vpc_id     = aws_vpc.New_Customer_VPC.id
  cidr_block = var.public_subnet_1
  availability_zone = "${var.region}a"

  tags = {
    Name = "${var.CUSTOMER_NAME}-public-sub-1"
  }
}

resource "aws_subnet" "public_2" {
  vpc_id     = aws_vpc.New_Customer_VPC.id
  cidr_block = var.public_subnet_2
<<<<<<< HEAD
  availability_zone = "${var.region}b"
=======
  availability_zone = "us-east-1b"
>>>>>>> origin/main

  tags = {
    Name = "${var.CUSTOMER_NAME}-public-sub-2"
  }
}


resource "aws_subnet" "private_1" {
  vpc_id     = aws_vpc.New_Customer_VPC.id
  cidr_block = var.private_subnet_1
  availability_zone = "${var.region}a"

  tags = {
    Name = "${var.CUSTOMER_NAME}-private-sub-1"
  }
}

resource "aws_subnet" "private_2" {
  vpc_id     = aws_vpc.New_Customer_VPC.id
  cidr_block = var.private_subnet_2
<<<<<<< HEAD
  availability_zone = "${var.region}b"
=======
  availability_zone = "us-east-1b"
>>>>>>> origin/main

  tags = {
    Name = "${var.CUSTOMER_NAME}-private-sub-2"
  }
}
